test_case/rust-lang_rust/28439_140836184.rs
 rust
fn main() {
    struct::foo();  //~ ERROR expected identifier
    mut::baz(); //~ ERROR expected identifier
}
